--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-This is source of my project to IJC subject - second homework.
+Hi folks,
 
-We had to implement hash table in C for word-counting programme and also write our own impementation of fold programme in C and C++
+this is a Git repository for my school projects during my studies on Brno University of Technology - Faculty of Information Technology.
+
+I will add more later.
