--- a/README
+++ b/README
@@ -1,5 +1,3 @@
 Hi folks,
 
-this is a Git repository for my school projects during my studies on Brno University of Technology - Faculty of Information Technology.
-
-I will add more later.
+this is a Git repository for school projects I had during my studies on Brno University of Technology - Faculty of Information Technology.
